--- a/index.html
+++ b/index.html
@@ -35,7 +35,13 @@ const keys = {};
 
 const TOTAL_LEVELS = 20;
 const CHECKPOINT_INTERVAL = 5;
+const HEATMAP_COLS = 80;
+const HEATMAP_ROWS = 40;
 
+const SAVE_KEY = "hard_platformer_save";
+const LEADERBOARD_KEY = "hard_platformer_leaderboard";
+
+/* ================= STATE ================= */
 let currentLevel = 0;
 let checkpointLevel = 0;
 let levelsCompleted = 0;
@@ -44,14 +50,20 @@ let gameStarted = false;
 
 /* ================= TIMER ================= */
 let startTime = 0;
+let runTime = 0;
 function getTime() {
-  return gameStarted ? performance.now() - startTime : 0;
+  return gameStarted ? performance.now() - startTime : runTime;
 }
 function formatTime(ms) {
   const s = Math.floor(ms / 1000);
   const m = Math.floor(s / 60);
   return `${m}:${(s % 60).toString().padStart(2,"0")}`;
 }
+
+/* ================= HEATMAP ================= */
+const heatmap = Array.from({length: HEATMAP_COLS}, () =>
+  Array.from({length: HEATMAP_ROWS}, () => 0)
+);
 
 /* ================= PLAYER ================= */
 const player = {
@@ -69,155 +81,249 @@ document.addEventListener("keydown", e => {
   keys[e.code] = true;
   if (!gameStarted) {
     gameStarted = true;
-    startTime = performance.now();
+    startTime = performance.now() - runTime;
   }
 });
 document.addEventListener("keyup", e => keys[e.code] = false);
 
-/* ================= UTILS ================= */
-function rect(a,b){
-  return a.x < b.x+b.w && a.x+a.w > b.x &&
-         a.y < b.y+b.h && a.y+a.h > b.y;
-}
+/* ================= BIOMES ================= */
+const BIOMES = [
+  { name: "GRASS", bg: "#112", spike: "red" },
+  { name: "ICE", bg: "#0a1a2a", spike: "#7ff" },
+  { name: "LAVA", bg: "#2a0a0a", spike: "orange" },
+  { name: "VOID", bg: "#000", spike: "magenta" }
+];
 
-function respawn() {
-  player.x = 50;
-  player.y = 300;
-  player.vx = player.vy = 0;
-}
-
-/* ================= LEVEL ================= */
+/* ================= LEVEL GENERATION ================= */
 function generateLevel(n) {
+  const biomeIndex = Math.floor(n / 5);
   const platforms = [{ x:0, y:360, w:800, h:40 }];
+  const moving = [];
   const spikes = [{ x:0, y:380, w:800, h:20 }];
   const goal = { x:740, y:80, w:40, h:40 };
 
-  for (let i=0;i<5;i++) {
+  // Platforms
+  for (let i=0;i<5;i++){
     platforms.push({
       x:120 + i*120,
       y:300 - i*35,
       w:90,
       h:20
     });
-
-    if (i % 2 === 0) {
-      spikes.push({
-        x:160 + i*120,
-        y:340 - i*35,
-        w:40,
-        h:20
-      });
-    }
   }
 
-  return { platforms, spikes, goal };
+  // Moving platform
+  if (biomeIndex >= 1) {
+    moving.push({
+      x:200,
+      y:200,
+      w:120,
+      h:20,
+      dx: 1+biomeIndex*0.5,
+      range: 180,
+      startX:200
+    });
+  }
+
+  // Spikes on walls / ceilings
+  if (biomeIndex >= 1) spikes.push({ x:200, y:0, w:400, h:20 });
+  if (biomeIndex >= 2) {
+    spikes.push({ x:0, y:200, w:20, h:160 });
+    spikes.push({ x:780, y:160, w:20, h:200 });
+  }
+
+  return { platforms, moving, spikes, goal, biome: biomeIndex };
 }
 
 let level = generateLevel(0);
 
-/* ================= UPDATE ================= */
-function update() {
-  if (!gameStarted) return;
+/* ================= UTILS ================= */
+function rect(a,b){
+  return a.x < b.x+b.w && a.x+a.w > b.x &&
+         a.y < b.y+b.h && a.y+a.h > b.y;
+}
+function respawn(){
+  player.x = 50;
+  player.y = 300;
+  player.vx = player.vy = 0;
+}
 
+/* ================= SAVE / LOAD ================= */
+function saveGame(){
+  localStorage.setItem(SAVE_KEY, JSON.stringify({
+    currentLevel, checkpointLevel, levelsCompleted, deaths, runTime: getTime(), heatmap
+  }));
+}
+function loadGame(){
+  const raw = localStorage.getItem(SAVE_KEY);
+  if(!raw) return false;
+  try{
+    const d = JSON.parse(raw);
+    currentLevel = d.currentLevel ?? 0;
+    checkpointLevel = d.checkpointLevel ?? 0;
+    levelsCompleted = d.levelsCompleted ?? 0;
+    deaths = d.deaths ?? 0;
+    runTime = d.runTime ?? 0;
+    startTime = performance.now() - runTime;
+    for(let x=0;x<HEATMAP_COLS;x++)
+      for(let y=0;y<HEATMAP_ROWS;y++)
+        heatmap[x][y] = d.heatmap?.[x]?.[y] ?? 0;
+    level = generateLevel(currentLevel);
+    return true;
+  }catch{return false;}
+}
+
+/* ================= LEADERBOARD ================= */
+function loadLeaderboard(){
+  return JSON.parse(localStorage.getItem(LEADERBOARD_KEY) || "[]");
+}
+function saveLeaderboard(lb){
+  localStorage.setItem(LEADERBOARD_KEY, JSON.stringify(lb));
+}
+function addLeaderboardEntry(name, time){
+  const lb = loadLeaderboard();
+  lb.push({name,time});
+  lb.sort((a,b)=>a.time-b.time);
+  saveLeaderboard(lb.slice(0,5));
+}
+
+/* ================= UPDATE ================= */
+function update(){
+  if(!gameStarted) return;
+
+  // Movement
   if (keys.KeyA || keys.ArrowLeft) player.vx -= player.speed;
   if (keys.KeyD || keys.ArrowRight) player.vx += player.speed;
-
   if (keys.KeyW || keys.ArrowUp || keys.Space) player.jumpBuffer = 6;
   else player.jumpBuffer--;
 
-  player.vx = Math.max(-player.maxSpeed, Math.min(player.maxSpeed, player.vx));
   player.vx *= friction;
-
+  player.vx = Math.max(-player.maxSpeed, Math.min(player.maxSpeed, player.vx));
   player.vy += gravity;
   player.x += player.vx;
   player.y += player.vy;
 
   player.grounded = false;
 
-  level.platforms.forEach(p => {
-    if (rect(player,p)) {
+  // Platforms collision
+  [...level.platforms,...level.moving].forEach(p=>{
+    if(rect(player,p)){
       const prevY = player.y - player.vy;
-      if (prevY + player.h <= p.y) {
+      if(prevY+player.h <= p.y){
         player.y = p.y - player.h;
         player.vy = 0;
         player.grounded = true;
         player.coyote = 6;
+        if(p.dx) player.x += p.dx;
       }
     }
   });
 
-  if (!player.grounded) player.coyote--;
+  if(!player.grounded) player.coyote--;
 
-  if (player.jumpBuffer > 0 && player.coyote > 0) {
+  // Jump
+  if(player.jumpBuffer>0 && player.coyote>0){
     player.vy = jumpForce;
     player.jumpBuffer = 0;
   }
 
-  level.spikes.forEach(s => {
-    if (rect(player,s)) {
+  // Spikes
+  level.spikes.forEach(s=>{
+    if(rect(player,s)){
       deaths++;
+      heatmap[Math.floor(player.x/10)][Math.floor(player.y/10)]++;
       currentLevel = checkpointLevel;
       level = generateLevel(currentLevel);
       respawn();
+      saveGame();
     }
   });
 
-  if (rect(player, level.goal)) {
+  // Goal
+  if(rect(player,level.goal)){
     currentLevel++;
     levelsCompleted++;
-
-    if (currentLevel % CHECKPOINT_INTERVAL === 0) {
-      checkpointLevel = currentLevel;
-    }
-
-    if (currentLevel >= TOTAL_LEVELS) {
-      alert("YOU BEAT THE GAME!");
-      currentLevel = checkpointLevel = levelsCompleted = deaths = 0;
+    if(currentLevel % CHECKPOINT_INTERVAL === 0) checkpointLevel = currentLevel;
+    if(currentLevel >= TOTAL_LEVELS){
       gameStarted = false;
+      runTime = getTime();
+      const name = prompt(`YOU BEAT THE GAME! Time: ${formatTime(runTime)}\nEnter name:`, "PLAYER");
+      if(name) addLeaderboardEntry(name.slice(0,12), runTime);
+      currentLevel = checkpointLevel = levelsCompleted = deaths = 0;
+      saveGame();
       return;
     }
-
     level = generateLevel(currentLevel);
     respawn();
+    saveGame();
   }
+
+  // Moving platforms
+  level.moving.forEach(p=>{
+    p.x += p.dx;
+    if(Math.abs(p.x - p.startX) > p.range) p.dx*=-1;
+  });
 }
 
 /* ================= DRAW ================= */
-function draw() {
-  ctx.fillStyle = "#000";
+function draw(){
+  // Background
+  ctx.fillStyle = gameStarted ? BIOMES[level.biome].bg : "#000";
   ctx.fillRect(0,0,800,400);
 
-  if (!gameStarted) {
-    ctx.fillStyle = "#fff";
-    ctx.font = "28px monospace";
-    ctx.textAlign = "center";
-    ctx.fillText("PRESS ANY KEY TO START", 400, 200);
-    ctx.textAlign = "left";
+  if(!gameStarted){
+    ctx.fillStyle="#fff";
+    ctx.font="28px monospace";
+    ctx.textAlign="center";
+    ctx.fillText("PRESS ANY KEY TO START",400,200);
+    ctx.textAlign="left";
     return;
   }
 
-  ctx.fillStyle = "#777";
-  level.platforms.forEach(p => ctx.fillRect(p.x,p.y,p.w,p.h));
+  // Heatmap
+  for(let x=0;x<HEATMAP_COLS;x++)
+    for(let y=0;y<HEATMAP_ROWS;y++)
+      if(heatmap[x][y]>0){
+        ctx.fillStyle=`rgba(255,0,0,${Math.min(heatmap[x][y]/10,0.4)})`;
+        ctx.fillRect(x*10,y*10,10,10);
+      }
 
-  ctx.fillStyle = "red";
-  level.spikes.forEach(s => ctx.fillRect(s.x,s.y,s.w,s.h));
+  // Platforms
+  ctx.fillStyle="#888";
+  level.platforms.forEach(p=>ctx.fillRect(p.x,p.y,p.w,p.h));
+  ctx.fillStyle="#aaa";
+  level.moving.forEach(p=>ctx.fillRect(p.x,p.y,p.w,p.h));
 
-  ctx.fillStyle = "gold";
-  ctx.fillRect(level.goal.x, level.goal.y, level.goal.w, level.goal.h);
+  // Spikes
+  ctx.fillStyle = BIOMES[level.biome].spike;
+  level.spikes.forEach(s=>ctx.fillRect(s.x,s.y,s.w,s.h));
 
-  ctx.fillStyle = "#4CAF50";
-  ctx.fillRect(player.x, player.y, player.w, player.h);
+  // Goal
+  ctx.fillStyle="gold";
+  ctx.fillRect(level.goal.x,level.goal.y,level.goal.w,level.goal.h);
 
-  ctx.fillStyle = "#fff";
-  ctx.font = "14px monospace";
-  ctx.fillText(`Level: ${currentLevel+1}/${TOTAL_LEVELS}`, 10, 18);
-  ctx.fillText(`Checkpoint: ${checkpointLevel+1}`, 10, 34);
-  ctx.fillText(`Deaths: ${deaths}`, 10, 50);
-  ctx.fillText(`Time: ${formatTime(getTime())}`, 10, 66);
+  // Player
+  ctx.fillStyle="#4CAF50";
+  ctx.fillRect(player.x,player.y,player.w,player.h);
+
+  // UI
+  ctx.fillStyle="#fff";
+  ctx.font="14px monospace";
+  ctx.fillText(`Level: ${currentLevel+1}/${TOTAL_LEVELS}`,10,18);
+  ctx.fillText(`Checkpoint: ${checkpointLevel+1}`,10,34);
+  ctx.fillText(`Deaths: ${deaths}`,10,50);
+  ctx.fillText(`Completed: ${levelsCompleted}`,10,66);
+  ctx.fillText(`Time: ${formatTime(getTime())}`,10,82);
+
+  // Leaderboard
+  const lb = loadLeaderboard();
+  ctx.fillText("🏆 Fastest Runs",520,20);
+  lb.forEach((e,i)=>ctx.fillText(`${i+1}. ${e.name} — ${formatTime(e.time)}`,520,40+i*18));
 }
 
 /* ================= LOOP ================= */
-function loop() {
+loadGame();
+function loop(){
   update();
   draw();
   requestAnimationFrame(loop);
