--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ const jumpForce = -14;
 const friction = 0.85;
 const keys = {};
 
-const TOTAL_LEVELS = 20;
+const TOTAL_LEVELS = 10;
 const CHECKPOINT_INTERVAL = 5;
 const HEATMAP_COLS = 80;
 const HEATMAP_ROWS = 40;
@@ -86,39 +86,87 @@ const BIOMES = [
 
 /* ================= LEVELS ================= */
 const levels = [
-  // LEVEL 1
-  { biome:0, platforms:[{x:0,y:360,w:800,h:40},{x:120,y:300,w:90,h:20},{x:240,y:265,w:90,h:20},{x:360,y:230,w:90,h:20}], moving:[], spikes:[{x:0,y:380,w:800,h:20}], goal:{x:740,y:80,w:40,h:40} },
-  // LEVEL 2
-  { biome:0, platforms:[{x:0,y:360,w:800,h:40},{x:150,y:300,w:80,h:20},{x:300,y:260,w:80,h:20},{x:450,y:220,w:80,h:20}], moving:[], spikes:[{x:0,y:380,w:800,h:20}], goal:{x:740,y:60,w:40,h:40} },
-  // LEVEL 3
-  { biome:0, platforms:[{x:0,y:360,w:800,h:40},{x:180,y:300,w:80,h:20},{x:360,y:260,w:80,h:20},{x:540,y:220,w:80,h:20}], moving:[], spikes:[{x:0,y:380,w:800,h:20}], goal:{x:740,y:50,w:40,h:40} },
-  // LEVEL 4
-  { biome:1, platforms:[{x:0,y:360,w:800,h:40},{x:120,y:300,w:80,h:20},{x:300,y:250,w:80,h:20},{x:500,y:200,w:80,h:20}], moving:[{x:200,y:220,w:120,h:20,dx:1.5,range:180,startX:200}], spikes:[{x:0,y:380,w:800,h:20},{x:200,y:0,w:400,h:20}], goal:{x:740,y:60,w:40,h:40} },
-  // LEVEL 5
-  { biome:1, platforms:[{x:0,y:360,w:800,h:40},{x:100,y:300,w:80,h:20},{x:250,y:260,w:80,h:20},{x:400,y:210,w:80,h:20}], moving:[{x:250,y:220,w:120,h:20,dx:1.5,range:160,startX:250}], spikes:[{x:0,y:380,w:800,h:20},{x:0,y:200,w:20,h:160},{x:780,y:160,w:20,h:200}], goal:{x:740,y:50,w:40,h:40} },
-  // LEVEL 6
-  { biome:1, platforms:[{x:0,y:360,w:800,h:40},{x:150,y:300,w:80,h:20},{x:300,y:250,w:80,h:20},{x:450,y:200,w:80,h:20}], moving:[{x:200,y:220,w:120,h:20,dx:1.5,range:180,startX:200}], spikes:[{x:0,y:380,w:800,h:20},{x:0,y:200,w:20,h:160},{x:780,y:160,w:20,h:200}], goal:{x:740,y:50,w:40,h:40} },
-  // LEVEL 7
-  { biome:2, platforms:[{x:0,y:360,w:800,h:40},{x:120,y:300,w:80,h:20},{x:300,y:240,w:80,h:20},{x:500,y:180,w:80,h:20}], moving:[{x:250,y:220,w:120,h:20,dx:2,range:160,startX:250}], spikes:[{x:0,y:380,w:800,h:20},{x:0,y:200,w:20,h:160},{x:780,y:160,w:20,h:200}], goal:{x:740,y:50,w:40,h:40} },
-  // LEVEL 8
-  { biome:2, platforms:[{x:0,y:360,w:800,h:40},{x:100,y:300,w:80,h:20},{x:250,y:250,w:80,h:20},{x:400,y:200,w:80,h:20}], moving:[{x:200,y:210,w:120,h:20,dx:2,range:180,startX:200}], spikes:[{x:0,y:380,w:800,h:20},{x:0,y:200,w:20,h:160},{x:780,y:160,w:20,h:200}], goal:{x:740,y:50,w:40,h:40} },
-  // LEVEL 9
-  { biome:2, platforms:[{x:0,y:360,w:800,h:40},{x:150,y:300,w:80,h:20},{x:300,y:250,w:80,h:20},{x:450,y:200,w:80,h:20}], moving:[{x:250,y:220,w:120,h:20,dx:2,range:160,startX:250}], spikes:[{x:0,y:380,w:800,h:20},{x:0,y:200,w:20,h:160},{x:780,y:160,w:20,h:200}], goal:{x:740,y:50,w:40,h:40} },
-  // LEVEL 10
-  { biome:3, platforms:[{x:0,y:360,w:800,h:40},{x:120,y:300,w:80,h:20},{x:300,y:240,w:80,h:20},{x:500,y:180,w:80,h:20}], moving:[{x:200,y:220,w:120,h:20,dx:2.5,range:180,startX:200}], spikes:[{x:0,y:380,w:800,h:20},{x:0,y:200,w:20,h:160},{x:780,y:160,w:20,h:200}], goal:{x:740,y:50,w:40,h:40} },
-  // LEVEL 11-20
-  // For brevity, repeat pattern but you can manually adjust platforms/moving/spikes to increase difficulty
-];
-
-for(let i=11;i<=20;i++){
-  levels.push({
-    biome: Math.floor(i/5),
-    platforms:[{x:0,y:360,w:800,h:40},{x:100,y:300,w:80,h:20},{x:250,y:250,w:80,h:20},{x:400,y:200,w:80,h:20}],
-    moving:[{x:200,y:220,w:120,h:20,dx:1.5+i/10,range:160,startX:200}],
-    spikes:[{x:0,y:380,w:800,h:20},{x:0,y:200,w:20,h:160},{x:780,y:160,w:20,h:200}],
+  // LEVEL 1 - easy intro
+  { 
+    biome:0,
+    platforms:[{x:0,y:360,w:800,h:40},{x:120,y:300,w:80,h:20},{x:260,y:260,w:80,h:20},{x:400,y:220,w:80,h:20}],
+    moving:[],
+    spikes:[{x:0,y:380,w:800,h:20}],
+    goal:{x:740,y:180,w:40,h:40}
+  },
+  // LEVEL 2 - small gaps
+  {
+    biome:0,
+    platforms:[{x:0,y:360,w:800,h:40},{x:150,y:300,w:70,h:20},{x:280,y:260,w:70,h:20},{x:420,y:220,w:70,h:20}],
+    moving:[{x:250,y:200,w:100,h:20,dx:1,range:100,startX:250}],
+    spikes:[{x:0,y:380,w:800,h:20}],
+    goal:{x:740,y:180,w:40,h:40}
+  },
+  // LEVEL 3 - higher jumps
+  {
+    biome:1,
+    platforms:[{x:0,y:360,w:800,h:40},{x:120,y:280,w:80,h:20},{x:260,y:240,w:80,h:20},{x:400,y:200,w:80,h:20}],
+    moving:[{x:200,y:220,w:120,h:20,dx:1.5,range:150,startX:200}],
+    spikes:[{x:0,y:380,w:800,h:20},{x:0,y:0,w:20,h:160}],
+    goal:{x:740,y:150,w:40,h:40}
+  },
+  // LEVEL 4 - moving spikes
+  {
+    biome:1,
+    platforms:[{x:0,y:360,w:800,h:40},{x:150,y:300,w:80,h:20},{x:300,y:260,w:80,h:20},{x:450,y:220,w:80,h:20}],
+    moving:[{x:250,y:200,w:120,h:20,dx:2,range:160,startX:250}],
+    spikes:[{x:0,y:380,w:800,h:20},{x:0,y:0,w:20,h:160},{x:780,y:160,w:20,h:200}],
+    goal:{x:740,y:120,w:40,h:40}
+  },
+  // LEVEL 5 - checkpoint level, harder gaps
+  {
+    biome:2,
+    platforms:[{x:0,y:360,w:800,h:40},{x:130,y:280,w:60,h:20},{x:260,y:240,w:60,h:20},{x:390,y:200,w:60,h:20},{x:520,y:160,w:60,h:20}],
+    moving:[{x:200,y:220,w:120,h:20,dx:2,range:160,startX:200}],
+    spikes:[{x:0,y:380,w:800,h:20},{x:0,y:0,w:20,h:160},{x:780,y:160,w:20,h:200}],
+    goal:{x:740,y:100,w:40,h:40}
+  },
+  // LEVEL 6 - ice/slippery biome
+  {
+    biome:1,
+    platforms:[{x:0,y:360,w:800,h:40},{x:140,y:280,w:60,h:20},{x:300,y:240,w:60,h:20},{x:460,y:200,w:60,h:20}],
+    moving:[{x:250,y:210,w:120,h:20,dx:2.5,range:180,startX:250}],
+    spikes:[{x:0,y:380,w:800,h:20},{x:0,y:0,w:20,h:160},{x:780,y:160,w:20,h:200}],
+    goal:{x:740,y:90,w:40,h:40}
+  },
+  // LEVEL 7 - lava biome, tricky jumps
+  {
+    biome:2,
+    platforms:[{x:0,y:360,w:800,h:40},{x:120,y:300,w:60,h:20},{x:260,y:250,w:60,h:20},{x:400,y:200,w:60,h:20},{x:540,y:160,w:60,h:20}],
+    moving:[{x:200,y:220,w:120,h:20,dx:3,range:180,startX:200}],
+    spikes:[{x:0,y:380,w:800,h:20},{x:0,y:0,w:20,h:160},{x:780,y:160,w:20,h:200}],
+    goal:{x:740,y:80,w:40,h:40}
+  },
+  // LEVEL 8 - void biome, fast moving platforms
+  {
+    biome:3,
+    platforms:[{x:0,y:360,w:800,h:40},{x:150,y:300,w:60,h:20},{x:300,y:260,w:60,h:20},{x:450,y:200,w:60,h:20}],
+    moving:[{x:200,y:210,w:120,h:20,dx:3.5,range:200,startX:200}],
+    spikes:[{x:0,y:380,w:800,h:20},{x:0,y:0,w:20,h:160},{x:780,y:160,w:20,h:200}],
+    goal:{x:740,y:70,w:40,h:40}
+  },
+  // LEVEL 9 - very tight jumps
+  {
+    biome:3,
+    platforms:[{x:0,y:360,w:800,h:40},{x:130,y:280,w:50,h:20},{x:260,y:240,w:50,h:20},{x:390,y:200,w:50,h:20},{x:520,y:160,w:50,h:20}],
+    moving:[{x:200,y:220,w:120,h:20,dx:4,range:200,startX:200}],
+    spikes:[{x:0,y:380,w:800,h:20},{x:0,y:0,w:20,h:160},{x:780,y:160,w:20,h:200}],
+    goal:{x:740,y:60,w:40,h:40}
+  },
+  // LEVEL 10 - final, hardest
+  {
+    biome:3,
+    platforms:[{x:0,y:360,w:800,h:40},{x:120,y:300,w:50,h:20},{x:260,y:250,w:50,h:20},{x:400,y:200,w:50,h:20},{x:540,y:150,w:50,h:20}],
+    moving:[{x:200,y:210,w:120,h:20,dx:4.5,range:220,startX:200}],
+    spikes:[{x:0,y:380,w:800,h:20},{x:0,y:0,w:20,h:160},{x:780,y:160,w:20,h:200}],
     goal:{x:740,y:50,w:40,h:40}
-  });
-}
+  }
+];
 
 /* ================= UTILS ================= */
 function rect(a,b){
