--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ let levelsCompleted = 0;
 let deaths = 0;
 
 /* ================= TIMER ================= */
-let startTime = performance.now(); // Start immediately
+let startTime; // start after first draw
 function getTime() { return performance.now() - startTime; }
 function formatTime(ms) {
   const s = Math.floor(ms / 1000);
@@ -86,86 +86,16 @@ const BIOMES = [
 
 /* ================= LEVELS ================= */
 const levels = [
-  // LEVEL 1 - easy intro
-  { 
-    biome:0,
-    platforms:[{x:0,y:360,w:800,h:40},{x:120,y:300,w:80,h:20},{x:260,y:260,w:80,h:20},{x:400,y:220,w:80,h:20}],
-    moving:[],
-    spikes:[{x:0,y:380,w:800,h:20}],
-    goal:{x:740,y:180,w:40,h:40}
-  },
-  // LEVEL 2 - small gaps
-  {
-    biome:0,
-    platforms:[{x:0,y:360,w:800,h:40},{x:150,y:300,w:70,h:20},{x:280,y:260,w:70,h:20},{x:420,y:220,w:70,h:20}],
-    moving:[{x:250,y:200,w:100,h:20,dx:1,range:100,startX:250}],
-    spikes:[{x:0,y:380,w:800,h:20}],
-    goal:{x:740,y:180,w:40,h:40}
-  },
-  // LEVEL 3 - higher jumps
-  {
-    biome:1,
-    platforms:[{x:0,y:360,w:800,h:40},{x:120,y:280,w:80,h:20},{x:260,y:240,w:80,h:20},{x:400,y:200,w:80,h:20}],
-    moving:[{x:200,y:220,w:120,h:20,dx:1.5,range:150,startX:200}],
-    spikes:[{x:0,y:380,w:800,h:20},{x:0,y:0,w:20,h:160}],
-    goal:{x:740,y:150,w:40,h:40}
-  },
-  // LEVEL 4 - moving spikes
-  {
-    biome:1,
-    platforms:[{x:0,y:360,w:800,h:40},{x:150,y:300,w:80,h:20},{x:300,y:260,w:80,h:20},{x:450,y:220,w:80,h:20}],
-    moving:[{x:250,y:200,w:120,h:20,dx:2,range:160,startX:250}],
-    spikes:[{x:0,y:380,w:800,h:20},{x:0,y:0,w:20,h:160},{x:780,y:160,w:20,h:200}],
-    goal:{x:740,y:120,w:40,h:40}
-  },
-  // LEVEL 5 - checkpoint level, harder gaps
-  {
-    biome:2,
-    platforms:[{x:0,y:360,w:800,h:40},{x:130,y:280,w:60,h:20},{x:260,y:240,w:60,h:20},{x:390,y:200,w:60,h:20},{x:520,y:160,w:60,h:20}],
-    moving:[{x:200,y:220,w:120,h:20,dx:2,range:160,startX:200}],
-    spikes:[{x:0,y:380,w:800,h:20},{x:0,y:0,w:20,h:160},{x:780,y:160,w:20,h:200}],
-    goal:{x:740,y:100,w:40,h:40}
-  },
-  // LEVEL 6 - ice/slippery biome
-  {
-    biome:1,
-    platforms:[{x:0,y:360,w:800,h:40},{x:140,y:280,w:60,h:20},{x:300,y:240,w:60,h:20},{x:460,y:200,w:60,h:20}],
-    moving:[{x:250,y:210,w:120,h:20,dx:2.5,range:180,startX:250}],
-    spikes:[{x:0,y:380,w:800,h:20},{x:0,y:0,w:20,h:160},{x:780,y:160,w:20,h:200}],
-    goal:{x:740,y:90,w:40,h:40}
-  },
-  // LEVEL 7 - lava biome, tricky jumps
-  {
-    biome:2,
-    platforms:[{x:0,y:360,w:800,h:40},{x:120,y:300,w:60,h:20},{x:260,y:250,w:60,h:20},{x:400,y:200,w:60,h:20},{x:540,y:160,w:60,h:20}],
-    moving:[{x:200,y:220,w:120,h:20,dx:3,range:180,startX:200}],
-    spikes:[{x:0,y:380,w:800,h:20},{x:0,y:0,w:20,h:160},{x:780,y:160,w:20,h:200}],
-    goal:{x:740,y:80,w:40,h:40}
-  },
-  // LEVEL 8 - void biome, fast moving platforms
-  {
-    biome:3,
-    platforms:[{x:0,y:360,w:800,h:40},{x:150,y:300,w:60,h:20},{x:300,y:260,w:60,h:20},{x:450,y:200,w:60,h:20}],
-    moving:[{x:200,y:210,w:120,h:20,dx:3.5,range:200,startX:200}],
-    spikes:[{x:0,y:380,w:800,h:20},{x:0,y:0,w:20,h:160},{x:780,y:160,w:20,h:200}],
-    goal:{x:740,y:70,w:40,h:40}
-  },
-  // LEVEL 9 - very tight jumps
-  {
-    biome:3,
-    platforms:[{x:0,y:360,w:800,h:40},{x:130,y:280,w:50,h:20},{x:260,y:240,w:50,h:20},{x:390,y:200,w:50,h:20},{x:520,y:160,w:50,h:20}],
-    moving:[{x:200,y:220,w:120,h:20,dx:4,range:200,startX:200}],
-    spikes:[{x:0,y:380,w:800,h:20},{x:0,y:0,w:20,h:160},{x:780,y:160,w:20,h:200}],
-    goal:{x:740,y:60,w:40,h:40}
-  },
-  // LEVEL 10 - final, hardest
-  {
-    biome:3,
-    platforms:[{x:0,y:360,w:800,h:40},{x:120,y:300,w:50,h:20},{x:260,y:250,w:50,h:20},{x:400,y:200,w:50,h:20},{x:540,y:150,w:50,h:20}],
-    moving:[{x:200,y:210,w:120,h:20,dx:4.5,range:220,startX:200}],
-    spikes:[{x:0,y:380,w:800,h:20},{x:0,y:0,w:20,h:160},{x:780,y:160,w:20,h:200}],
-    goal:{x:740,y:50,w:40,h:40}
-  }
+  { biome:0, platforms:[{x:0,y:360,w:800,h:40},{x:120,y:300,w:80,h:20},{x:260,y:260,w:80,h:20},{x:400,y:220,w:80,h:20}], moving:[], spikes:[{x:0,y:380,w:800,h:20}], goal:{x:740,y:180,w:40,h:40} },
+  { biome:0, platforms:[{x:0,y:360,w:800,h:40},{x:150,y:300,w:70,h:20},{x:280,y:260,w:70,h:20},{x:420,y:220,w:70,h:20}], moving:[{x:250,y:200,w:100,h:20,dx:1,range:100,startX:250}], spikes:[{x:0,y:380,w:800,h:20}], goal:{x:740,y:180,w:40,h:40} },
+  { biome:1, platforms:[{x:0,y:360,w:800,h:40},{x:120,y:280,w:80,h:20},{x:260,y:240,w:80,h:20},{x:400,y:200,w:80,h:20}], moving:[{x:200,y:220,w:120,h:20,dx:1.5,range:150,startX:200}], spikes:[{x:0,y:380,w:800,h:20},{x:0,y:0,w:20,h:160}], goal:{x:740,y:150,w:40,h:40} },
+  { biome:1, platforms:[{x:0,y:360,w:800,h:40},{x:150,y:300,w:80,h:20},{x:300,y:260,w:80,h:20},{x:450,y:220,w:80,h:20}], moving:[{x:250,y:200,w:120,h:20,dx:2,range:160,startX:250}], spikes:[{x:0,y:380,w:800,h:20},{x:0,y:0,w:20,h:160},{x:780,y:160,w:20,h:200}], goal:{x:740,y:120,w:40,h:40} },
+  { biome:2, platforms:[{x:0,y:360,w:800,h:40},{x:130,y:280,w:60,h:20},{x:260,y:240,w:60,h:20},{x:390,y:200,w:60,h:20},{x:520,y:160,w:60,h:20}], moving:[{x:200,y:220,w:120,h:20,dx:2,range:160,startX:200}], spikes:[{x:0,y:380,w:800,h:20},{x:0,y:0,w:20,h:160},{x:780,y:160,w:20,h:200}], goal:{x:740,y:100,w:40,h:40} },
+  { biome:1, platforms:[{x:0,y:360,w:800,h:40},{x:140,y:280,w:60,h:20},{x:300,y:240,w:60,h:20},{x:460,y:200,w:60,h:20}], moving:[{x:250,y:210,w:120,h:20,dx:2.5,range:180,startX:250}], spikes:[{x:0,y:380,w:800,h:20},{x:0,y:0,w:20,h:160},{x:780,y:160,w:20,h:200}], goal:{x:740,y:90,w:40,h:40} },
+  { biome:2, platforms:[{x:0,y:360,w:800,h:40},{x:120,y:300,w:60,h:20},{x:260,y:250,w:60,h:20},{x:400,y:200,w:60,h:20},{x:540,y:160,w:60,h:20}], moving:[{x:200,y:220,w:120,h:20,dx:3,range:180,startX:200}], spikes:[{x:0,y:380,w:800,h:20},{x:0,y:0,w:20,h:160},{x:780,y:160,w:20,h:200}], goal:{x:740,y:80,w:40,h:40} },
+  { biome:3, platforms:[{x:0,y:360,w:800,h:40},{x:150,y:300,w:60,h:20},{x:300,y:260,w:60,h:20},{x:450,y:200,w:60,h:20}], moving:[{x:200,y:210,w:120,h:20,dx:3.5,range:200,startX:200}], spikes:[{x:0,y:380,w:800,h:20},{x:0,y:0,w:20,h:160},{x:780,y:160,w:20,h:200}], goal:{x:740,y:70,w:40,h:40} },
+  { biome:3, platforms:[{x:0,y:360,w:800,h:40},{x:130,y:280,w:50,h:20},{x:260,y:240,w:50,h:20},{x:390,y:200,w:50,h:20},{x:520,y:160,w:50,h:20}], moving:[{x:200,y:220,w:120,h:20,dx:4,range:200,startX:200}], spikes:[{x:0,y:380,w:800,h:20},{x:0,y:0,w:20,h:160},{x:780,y:160,w:20,h:200}], goal:{x:740,y:60,w:40,h:40} },
+  { biome:3, platforms:[{x:0,y:360,w:800,h:40},{x:120,y:300,w:50,h:20},{x:260,y:250,w:50,h:20},{x:400,y:200,w:50,h:20},{x:540,y:150,w:50,h:20}], moving:[{x:200,y:210,w:120,h:20,dx:4.5,range:220,startX:200}], spikes:[{x:0,y:380,w:800,h:20},{x:0,y:0,w:20,h:160},{x:780,y:160,w:20,h:200}], goal:{x:740,y:50,w:40,h:40} }
 ];
 
 /* ================= UTILS ================= */
@@ -337,8 +267,12 @@ function draw(){
   lb.forEach((e,i)=>ctx.fillText(`${i+1}. ${e.name} — ${formatTime(e.time)}`,520,40+i*18));
 }
 
-/* ================= LOOP ================= */
+/* ================= INITIALIZE & LOOP ================= */
 loadGame();
+respawn();     // Ensure player starts in position
+draw();        // Draw first frame immediately
+startTime = performance.now(); // Start timer after first frame
+
 function loop(){
   update();
   draw();
