--- a/index.html
+++ b/index.html
@@ -1,135 +1,263 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 <meta charset="UTF-8">
-<title>Challenging Platformer</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Platformer</title>
 <style>
-  body { margin: 0; background: #111; display: flex; justify-content: center; align-items: center; height: 100vh; }
-  canvas { background: #222; display: block; }
-  #timer { position: absolute; top: 10px; left: 10px; color: white; font-family: sans-serif; font-size: 24px; }
+  body { margin:0; background:#111; color:white; font-family:Arial; text-align:center;}
+  canvas { background:#222; display:block; margin:0 auto; border:2px solid #555;}
 </style>
 </head>
 <body>
-<div id="timer">Time: 0s</div>
-<canvas id="game" width="800" height="400"></canvas>
+<h2>Platformer — Arrow Keys to Move/Jump</h2>
+<canvas id="game" width="800" height="450"></canvas>
+<div id="ui"></div>
+
 <script>
-const canvas = document.getElementById('game');
-const ctx = canvas.getContext('2d');
-
-// Player
-const player = { x: 50, y: 330, w: 30, h: 50, vx: 0, vy: 0, speed: 4, jump: -12, onGround: false };
-
-// Level
-const platforms = [
-  {x:0,y:380,w:800,h:20},
-  {x:150,y:300,w:100,h:20},
-  {x:300,y:250,w:100,h:20},
-  {x:450,y:200,w:100,h:20},
-  {x:600,y:150,w:100,h:20}
-];
-
-const spikes = [
-  {x:200,y:365,w:50,h:15},
-  {x:350,y:235,w:50,h:15},
-  {x:500,y:185,w:50,h:15}
-];
-
-const goal = {x:700, y:100, w:50, h:50};
+const canvas = document.getElementById("game");
+const ctx = canvas.getContext("2d");
+const ui = document.getElementById("ui");
 
 let keys = {};
-let time = 0;
-let gameOver = false;
+document.addEventListener("keydown", e => keys[e.key] = true);
+document.addEventListener("keyup", e => keys[e.key] = false);
 
-// Controls
-document.addEventListener('keydown', e => keys[e.key] = true);
-document.addEventListener('keyup', e => keys[e.key] = false);
+// ---------- GAME DATA ----------
+const gravity = 0.5;
+const moveSpeed = 3;
+const jumpPower = 8;
+const maxJumpHold = 18;
 
-// Game loop
-function update() {
-  if (gameOver) return;
+let levelIndex = 0;
+let startTime = null;
+let finished = false;
 
-  // Timer
-  time += 1/60;
-  document.getElementById('timer').textContent = "Time: " + time.toFixed(1) + "s";
+const levels = [
+{
+  start:{x:40,y:350},
+  goal:{x:740,y:320,w:40,h:40},
+  platforms:[
+    {x:0,y:400,w:800,h:50},
+    {x:200,y:320,w:120,h:20},
+    {x:380,y:260,w:120,h:20},
+    {x:560,y:200,w:120,h:20}
+  ],
+  hazards:[{x:320,y:390,w:60,h:10}]
+},
+{
+  start:{x:40,y:350},
+  goal:{x:740,y:80,w:40,h:40},
+  platforms:[
+    {x:0,y:400,w:800,h:50},
+    {x:120,y:300,w:100,h:20},
+    {x:260,y:230,w:100,h:20},
+    {x:400,y:160,w:100,h:20},
+    {x:560,y:100,w:120,h:20}
+  ],
+  hazards:[{x:0,y:390,w:200,h:10},{x:300,y:390,w:200,h:10}]
+},
+{
+  start:{x:40,y:350},
+  goal:{x:720,y:350,w:40,h:40},
+  platforms:[
+    {x:0,y:400,w:800,h:50},
+    {x:200,y:340,w:80,h:20},
+    {x:350,y:300,w:80,h:20},
+    {x:500,y:260,w:80,h:20},
+    {x:650,y:220,w:80,h:20}
+  ],
+  hazards:[
+    {x:280,y:390,w:80,h:10},
+    {x:440,y:390,w:80,h:10}
+  ]
+},
+{
+  start:{x:40,y:350},
+  goal:{x:740,y:60,w:40,h:40},
+  platforms:[
+    {x:0,y:400,w:800,h:50},
+    {x:150,y:320,w:120,h:20},
+    {x:350,y:250,w:120,h:20},
+    {x:550,y:180,w:120,h:20},
+    {x:300,y:120,w:120,h:20}
+  ],
+  hazards:[
+    {x:0,y:390,w:150,h:10},
+    {x:650,y:390,w:150,h:10}
+  ]
+},
+{
+  start:{x:40,y:350},
+  goal:{x:740,y:350,w:40,h:40},
+  platforms:[
+    {x:0,y:400,w:800,h:50},
+    {x:150,y:350,w:80,h:20},
+    {x:300,y:300,w:80,h:20},
+    {x:450,y:250,w:80,h:20},
+    {x:600,y:200,w:80,h:20}
+  ],
+  hazards:[
+    {x:220,y:390,w:80,h:10},
+    {x:380,y:390,w:80,h:10},
+    {x:540,y:390,w:80,h:10}
+  ]
+}
+];
 
-  // Horizontal movement
-  player.vx = 0;
-  if (keys['ArrowLeft'] || keys['a']) player.vx = -player.speed;
-  if (keys['ArrowRight'] || keys['d']) player.vx = player.speed;
+let player;
 
-  // Gravity
-  player.vy += 0.5;
+function resetPlayer(){
+  const s = levels[levelIndex].start;
+  player = {
+    x:s.x, y:s.y,
+    w:20, h:20,
+    vx:0, vy:0,
+    onGround:false,
+    jumpHold:0
+  };
+}
+
+function nextLevel(){
+  levelIndex++;
+  if(levelIndex>=levels.length){
+    finished = true;
+    return;
+  }
+  resetPlayer();
+}
+
+function resetLevel(){
+  resetPlayer();
+}
+
+resetPlayer();
+
+// ---------- COLLISION ----------
+function rectIntersect(a,b){
+  return a.x<a.x+a.w && a.x < b.x+b.w &&
+         a.x+a.w > b.x &&
+         a.y+a.h > b.y &&
+         a.y < b.y+b.h;
+}
+
+// ---------- UPDATE ----------
+function update(){
+  if(finished) return;
+
+  if(!startTime) startTime = performance.now();
+
+  // movement
+  if(keys["ArrowLeft"]) player.vx = -moveSpeed;
+  else if(keys["ArrowRight"]) player.vx = moveSpeed;
+  else player.vx = 0;
+
+  // jump start
+  if(keys["ArrowUp"] && player.onGround){
+    player.vy = -jumpPower;
+    player.onGround = false;
+    player.jumpHold = 0;
+  }
+
+  // hold jump for higher jump
+  if(keys["ArrowUp"] && player.jumpHold < maxJumpHold && player.vy < 0){
+    player.vy -= 0.25;
+    player.jumpHold++;
+  }
+
+  player.vy += gravity;
+
   player.x += player.vx;
   player.y += player.vy;
 
-  // Collisions with platforms
+  // platforms
   player.onGround = false;
-  for (let p of platforms) {
-    if (player.x + player.w > p.x && player.x < p.x + p.w &&
-        player.y + player.h > p.y && player.y + player.h < p.y + p.h + player.vy) {
-      player.y = p.y - player.h;
-      player.vy = 0;
-      player.onGround = true;
+  for(const p of levels[levelIndex].platforms){
+    if(player.x < p.x+p.w &&
+       player.x+player.w > p.x &&
+       player.y+player.h > p.y &&
+       player.y+player.h < p.y + 20 &&
+       player.vy >=0){
+        player.y = p.y - player.h;
+        player.vy = 0;
+        player.onGround = true;
     }
   }
 
-  // Jump
-  if ((keys['ArrowUp'] || keys['w'] || keys[' ']) && player.onGround) {
-    player.vy = player.jump;
-    player.onGround = false;
-  }
-
-  // Check spikes
-  for (let s of spikes) {
-    if (player.x + player.w > s.x && player.x < s.x + s.w &&
-        player.y + player.h > s.y && player.y < s.y + s.h) {
-      gameOver = true;
-      alert("You hit spikes! Game Over.");
-      location.reload();
+  // hazards
+  for(const h of levels[levelIndex].hazards){
+    if(player.x < h.x+h.w &&
+       player.x+player.w > h.x &&
+       player.y < h.y+h.h &&
+       player.y+player.h > h.y){
+        resetLevel();
+        return;
     }
   }
 
-  // Check goal
-  if (player.x + player.w > goal.x && player.x < goal.x + goal.w &&
-      player.y + player.h > goal.y && player.y < goal.y + goal.h) {
-    gameOver = true;
-    alert("You reached the goal in " + time.toFixed(1) + " seconds!");
-    location.reload();
+  // goal
+  const g = levels[levelIndex].goal;
+  if(player.x < g.x+g.w &&
+     player.x+player.w > g.x &&
+     player.y < g.y+g.h &&
+     player.y+player.h > g.y){
+      nextLevel();
   }
 
-  // Boundaries
-  if (player.y > canvas.height) {
-    gameOver = true;
-    alert("You fell! Game Over.");
-    location.reload();
+  // fall off map
+  if(player.y > canvas.height+50){
+    resetLevel();
   }
-
-  draw();
-  requestAnimationFrame(update);
 }
 
-function draw() {
+// ---------- DRAW ----------
+function draw(){
   ctx.clearRect(0,0,canvas.width,canvas.height);
 
-  // Platforms
-  ctx.fillStyle = '#888';
-  for (let p of platforms) ctx.fillRect(p.x,p.y,p.w,p.h);
+  if(finished){
+    ctx.fillStyle="white";
+    ctx.font="40px Arial";
+    ctx.fillText("Finished!", 300,200);
+    const time = ((performance.now()-startTime)/1000).toFixed(2);
+    ctx.fillText("Total Time: "+time+"s", 250,260);
+    return;
+  }
 
-  // Spikes
-  ctx.fillStyle = 'red';
-  for (let s of spikes) ctx.beginPath(), ctx.moveTo(s.x,s.y+s.h), ctx.lineTo(s.x+s.w/2,s.y), ctx.lineTo(s.x+s.w,s.y+s.h), ctx.fill();
+  // player
+  ctx.fillStyle="cyan";
+  ctx.fillRect(player.x,player.y,player.w,player.h);
 
-  // Goal
-  ctx.fillStyle = 'gold';
-  ctx.fillRect(goal.x, goal.y, goal.w, goal.h);
+  // platforms
+  ctx.fillStyle="#888";
+  for(const p of levels[levelIndex].platforms){
+    ctx.fillRect(p.x,p.y,p.w,p.h);
+  }
 
-  // Player
-  ctx.fillStyle = 'cyan';
-  ctx.fillRect(player.x, player.y, player.w, player.h);
+  // hazards
+  ctx.fillStyle="red";
+  for(const h of levels[levelIndex].hazards){
+    ctx.fillRect(h.x,h.y,h.w,h.h);
+  }
+
+  // goal
+  const g = levels[levelIndex].goal;
+  ctx.fillStyle="lime";
+  ctx.fillRect(g.x,g.y,g.w,g.h);
+
+  // timer
+  const t = ((performance.now()-startTime)/1000).toFixed(2);
+  ctx.fillStyle="white";
+  ctx.font="18px Arial";
+  ctx.fillText("Time: "+t+"s",10,20);
+  ctx.fillText("Level: "+(levelIndex+1)+"/5",10,40);
 }
 
-update();
+// ---------- LOOP ----------
+function loop(){
+  update();
+  draw();
+  requestAnimationFrame(loop);
+}
+loop();
 </script>
 </body>
 </html>
